--- a/style.css
+++ b/style.css
@@ -101,13 +101,17 @@ form {
 }
 
 .button-container {
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
 }
 
 #addnew {
     margin-left: 20px;
+}
+
+.explainer {
+    padding: 20px;
 }
 
 @media only screen and (min-width: 800px){
